@@ -1,5 +1,6 @@
 1.1.0
 * Switch to java driver 2.1.3 and Guava 14.0.1 (yay!).
+* Upgraded Spark to the latest release version, 1.1.0 (#461)
 
 1.1.0 rc 3
 * Fix NPE when saving CassandraRows containing null values (#446)
